--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
 
 <div class="row">
 
-  <div class="medium-7 large-6 columns">
+  <div class="containerrrr">
     <h1>EducaBrasil</h1>
     <div class="subheader">
-    <p>A plataforma projetada para apoiar o seu desenvolvimento escolar é um espaço inovador que reúne recursos valiosos para estudantes do Ensino Médio. Com materiais didáticos interativos e videoaulas dinâmicas, ela oferece uma experiência de aprendizado envolvente e colaborativa. Aqui, você pode esclarecer dúvidas e melhorar seu desempenho acadêmico. Nosso objetivo é facilitar sua jornada acadêmica, ajudando você a conquistar seus objetivos com confiança e motivação. Junte-se a nós e transforme sua forma de estudar!</p>
-  </div>
+        <p>A plataforma projetada para apoiar o seu desenvolvimento escolar é um espaço inovador que reúne recursos valiosos para estudantes do Ensino Médio. Com materiais didáticos interativos e videoaulas dinâmicas, ela oferece uma experiência de aprendizado envolvente e colaborativa. Aqui, você pode esclarecer dúvidas e melhorar seu desempenho acadêmico. Nosso objetivo é facilitar sua jornada acadêmica, ajudando você a conquistar seus objetivos com confiança e motivação. Junte-se a nós e transforme sua forma de estudar!</p>
+    </div>
     <h2>Que tal trabalharmos a mente?</h2>
-    <div clas="textoini">
-    <p>As habilidades socioemocionais referem-se à capacidade de reconhecer, compreender e gerenciar as próprias emoções, bem como de estabelecer e manter relacionamentos saudáveis com os outros. Essas habilidades são fundamentais tanto para o bem-estar pessoal quanto para o sucesso em diversas áreas da vida, incluindo a educação e o ambiente de trabalho. Elas englobam uma série de competências. Essas habilidades são essenciais para o desenvolvimento de uma vida pessoal e profissional equilibrada. Elas podem ser ensinadas e aprimoradas ao longo do tempo, tanto na escola quanto em outros contextos, e são frequentemente associadas ao sucesso acadêmico e profissional.<br><strong>Dê uma ohada ----></strong></p>
-  </div>
-  </div>
+    <div class="textoini">
+        <p>As habilidades socioemocionais referem-se à capacidade de reconhecer, compreender e gerenciar as próprias emoções, bem como de estabelecer e manter relacionamentos saudáveis com os outros. Essas habilidades são fundamentais tanto para o bem-estar pessoal quanto para o sucesso em diversas áreas da vida, incluindo a educação e o ambiente de trabalho. Elas englobam uma série de competências. Essas habilidades são essenciais para o desenvolvimento de uma vida pessoal e profissional equilibrada. Elas podem ser ensinadas e aprimoradas ao longo do tempo, tanto na escola quanto em outros contextos, e são frequentemente associadas ao sucesso acadêmico e profissional.<br><a href="Relaxe!.html"><strong>Clique Aqui!</strong></a>
+        </p>
+    </div>
+</div>
 
-  <div class="show-for-large large-3 columns" id="inicial">
-    <a href="Relaxe!.html"><img src="imagens/relaxe.jpeg" alt="picture of space"></a>
-  </div>
+
+
 
 </div>
 
